<resources>

    <!-- Header -->
    <string name="app_name">3DFC</string>

    <!-- TextViews -->
    <string name="textview"> </string>
    <string name="animal_name">Animal name</string>


    <!-- Buttons -->
    <string name="voice_button">&#x1F399;</string>
    <string name="vb_desc">Reads the animal\'s description out loud</string>
    <string name="speak_button">&#x1F50A;</string>
    <string name="sb_desc">Input a voice command</string>
    <string name="flashlight_button">&#x1F526;</string>
    <string name="fb_desc">Turn on the flashlight</string>
    <string name="right_button">&#8618;</string>
    <string name="rb_desc">Rotate the animal right</string>
    <string name="left_button">&#x21A9;</string>
    <string name="lb_desc">Rotate the animal left</string>
    <string name="checklist_button">️&#x1F5FA;</string>
    <string name="cl_empty">You haven\'t visited any sites</string>
    <string name="cl_desc">Open the checklist of center locations</string>
    <string name="cl_error">File not found or an issue creating it, please check your permissions</string>

    <!-- Navigation -->
    <string name="previous">tour</string>
    <string name="home">home</string>
    <string name="next">settings</string>

    <!-- Menu items -->
    <string name="first_menu">Turn background black</string>
    <string name="second_menu">Turn background blue</string>
    <string name="third_menu">Turn background green</string>
    <string name="menu_text">Click the dots</string>

    <!-- Animal Descriptions -->
    <string name="desc1">A brown bear</string>
    <string name="desc2">A common house cat</string>
    <string name="desc3">A large cow</string>
    <string name="desc4">A dog</string>
    <string name="desc5">An elephant</string>
    <string name="desc6">A ferret</string>
    <string name="desc7">A hippopotamus</string>
    <string name="desc8">A horse</string>
    <string name="desc9">A koala bear</string>
    <string name="desc10">A lion</string>
    <string name="desc11">A reindeer</string>
    <string name="desc12">A wolverine</string>

    <!-- Intro text -->
    <string name="intro">Welcome to 3D Fauna Center!\n\nIn this virtual museum you can view different animals in their actual sizes and read short information packets on them.\n\nTo start, slowly wave your phone over a flat surface until a matrix of white dots appear, then just select any of the available animals to start learning.\n\n You can also view a list of your visited locations from the top-left button.</string>
    <string name="intro_ok">I understand!</string>
    <string name="voice_ok">Cancel</string>


    <!-- Error messages -->
    <string name="voice_error">Currently voice input forces a restart of ARCore</string>
    <string name="voice_anyway">Show me it anyway</string>
<!--    <string name="flashlight_error">Currently it isn\'t possible to turn on the device\'s torch while ARCore is running.</string>-->
</resources>
